<resources>
    <string name="app_name">Setall</string>

    <string name="steam">Steam</string>

    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="detail">详情</string>
    <string name="hint">提示</string>
    <string name="commit">提交</string>
    <string name="save">保存</string>
    <string name="go_next">下一步</string>
    <string name="rmb">￥</string>
    <string name="order">排序</string>
    <string name="filter">筛选</string>
    <string name="more">更多</string>
    <string name="export_db">导出DB</string>
    <string name="backup">导出备份</string>
    <string name="logout">退出登陆</string>

    <string name="loading">加载中…</string>

    <string name="vanity_url_name">Vanity Url Name:</string>
    <string name="login_success">登录成功!</string>
    <string name="login_fail">登录失败:</string>
    <string name="login">登录</string>
    <string name="login_loading">登录中</string>
    <string name="exit">注销</string>

    <string name="restore_to_setall">恢复到setall</string>
    <string name="transaction_histories">交易记录</string>
    <string name="check_trans_histories">查看交易记录</string>
    <string name="create_trans">新建交易记录</string>
    <string name="purchased_date">交易日期</string>
    <string name="choose_date">选择日期</string>
    <string name="buyer_name">购买者</string>
    <string name="owner_name">拥有者</string>
    <string name="add_game">添加游戏</string>
    <string name="name_null_warn">名字不能为空!</string>
    <string name="content_null_warn">内容不能为空!</string>
    <string name="games_load_fail">加载失败,请重试!</string>

    <string name="selected_count">已选择</string>
    <string name="select_games">选择游戏</string>
    <string name="no_item_selected">没有选择条目!</string>
    <string name="cancel_game_select_hint">已选择%1$d个游戏，确定退出？</string>
    <string name="select_game_or_dlc">选择Game或DLC</string>
    <string name="select_packages">选择包</string>
    <string name="no_package_to_select">没有可选的包, 可跳过!</string>
    <string name="pack_contains_count_price">共包含%1$d件物品 ￥%2$.2f</string>
    <string name="pack_contains_count">共包含%1$d件物品</string>

    <string name="price_init">原价:￥</string>
    <string name="price_purchased">购入价:￥</string>
    <string name="add_extra_msg">+备注</string>
    <string name="edit_msg">编辑备注</string>
    <string name="edit_prices">编辑价格</string>
    <string name="save_confirm_msg">确定保存?</string>
    <string name="price_null_not_allowed">请填写所有价格!</string>
    <string name="remove_app_confirm">确定删除此项？</string>

    <string name="title_logout">确定退出?</string>
</resources>
